apply plugin: 'com.android.application'
apply plugin: 'de.undercouch.download'

android {
    compileSdkVersion 32
    defaultConfig {
        applicationId "org.tensorflow.lite.examples.detection"
        minSdkVersion 21
        targetSdkVersion 32
        versionCode 1
        versionName "1.0"

        ndk {
            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility = "1.9"
        targetCompatibility = "1.9"
    }
    androidResources {
        noCompress 'tflite'
    }
    lint {
        abortOnError false
    }
    namespace 'org.tensorflow.lite.examples.detection'
    sourceSets {
        main {
            java {
                srcDirs 'src\\main\\java', 'src\\test', 'src\\main\\java\\test', 'src\\main\\java\\2', 'src\\test\\java'
            }
        }
    }
}

// import DownloadModels task
project.ext.ASSET_DIR = projectDir.toString() + '/src/main/assets'
project.ext.TMP_DIR = project.buildDir.toString() + '/downloads'

// Download default models; if you wish to use your own models then
// place them in the "assets" directory and comment out this line.
//apply from: "download_model.gradle"

//apply from: 'download_model.gradle'

dependencies {
//    implementation fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
//    implementation files('bin/gdbserver')
    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
    implementation "androidx.recyclerview:recyclerview-selection:1.1.0"
    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-rc01"

//    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:2.3.0'
//    implementation 'org.tensorflow:tensorflow-lite:2.2.0'
//    implementation 'org.tensorflow:tensorflow-lite-gpu:2.2.0'
//    implementation 'org.tensorflow:tensorflow-lite:1.14.0'
//    implementation(name:'tensorflow-lite', ext:'aar')
//    implementation(name:'tensorflow-lite-gpu', ext:'aar')

//    implementation 'org.tensorflow:tensorflow-lite-gpu:1.14.0'
//    implementation 'org.tensorflow:tensorflow-lite:0.0.0-gpu-experimental'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'com.github.aliab:Two-Step-Picker-Dialog:V1.1.0'

    //implementation 'com.google.code.gson:gson:2.8.6'
    //implementation 'com.google.firebase:firebase-firestore:23.0.2'
    implementation 'junit:junit:4.+'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'com.android.support.test:rules:1.0.2'
    androidTestImplementation 'com.google.truth:truth:1.1.3'

}
